--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 
     <header>
 
-        <a href="#" class="logo"><i class="fas-fa-untensils"></i>resto.</a>
+        <a href="#" class="logo"><i class="fas fa-utensils"></i>resto.</a>
+        <!-- <a href="#" class="logo"><img src="images/retinaicon.png" style="width:40px;" alt="" srcset="">RETINA.</a> -->
 
         <nav class="navbar">
-            <a href="#home">home</a>
+            <a class="active" href="#home">home</a>
             <a href="#dishes">dishes</a>
             <a href="#about">about</a>
             <a href="#menu">menu</a>
@@ -31,7 +32,7 @@
         </nav>
 
         <div class="icons">
-            <i class="fas fa-bars" id="bars"></i>
+            <i class="fas fa-bars" id="menu-bars"></i>
             <i class="fas fa-search" id="search-icon"></i>
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-shopping-cart"></a>
