--- a/index.html
+++ b/index.html
@@ -42,8 +42,54 @@
 
     <!-- header section end-->
 
+    <!-- search form -->
+    <form action="" id="search-form">
+        <input type="search" placeholder="search here..." name="" id="search-box">
+        <label for="search-box" class="fas fa-search"></label>
+        <i class="fas fa-times" id="close"></i>
+    </form>
 
-
+    <!-- home section start -->
+    <section class="home" id="home">
+        <div class="home-slider">
+            <div class="wrapper">
+                <div class="slider">
+                    <div class="content">
+                        <span>our special food</span>
+                        <h3>spicy noodles</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio dignissimos saepe maiores!</p>
+                        <a href="#" class="btn">order now</a>
+                    </div>
+                    <div class="image">
+                        <img src="images/home-img-1.png" alt="" srcset="">
+                    </div>
+                </div>
+                <div class="slider">
+                    <div class="content">
+                        <span>our special food</span>
+                        <h3>fried chicken</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio dignissimos saepe maiores!</p>
+                        <a href="#" class="btn">order now</a>
+                    </div>
+                    <div class="image">
+                        <img src="images/home-img-2.png" alt="" srcset="">
+                    </div>
+                </div>
+                <div class="slider">
+                    <div class="content">
+                        <span>our special food</span>
+                        <h3>hot pizza</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio dignissimos saepe maiores!</p>
+                        <a href="#" class="btn">order now</a>
+                    </div>
+                    <div class="image">
+                        <img src="images/home-img-3.png" alt="" srcset="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- home section end -->
 
 
 
