--- a/index.html
+++ b/index.html
@@ -192,6 +192,42 @@
     </secton>
     <!-- dishes section end -->
 
+    <!-- about section startes -->
+    <section class="about" id="about">
+        <h3 class="sub-heading">about us</h3>
+        <h1 class="heading">why choose us?</h1>
+
+        <div class="row">
+            <div class="image">
+                <img src="images/about-img.png" alt="">
+            </div>
+            <div class="content">
+                <h3>best food in the country</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem, minus tempora doloremque et neque
+                    perspiciatis repellendus, animi earum inventore quibusdam officiis corrupti laboriosam nam minima
+                    eum fugit sint reiciendis tempore.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis ullam blanditiis hic expedita
+                    distinctio temporibus inventore animi neque impedit odit!</p>
+                <div class="icons-container">
+                    <div class="icons">
+                        <i class="fas fa-shipping-fast"></i>
+                        <span>free delivery</span>
+                    </div>
+                    <div class="icons">
+                        <i class="fas fa-dollar-sign"></i>
+                        <span>easy payments</span>
+                    </div>
+                    <div class="icons">
+                        <i class="fas fa-headset"></i>
+                        <span>24/7 service</span>
+                    </div>
+                </div>
+                <a href="#" class="btn">learn more</a>
+            </div>
+        </div>
+
+    </section>
+    <!-- about section end -->
 
 
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
