--- a/index.html
+++ b/index.html
@@ -410,6 +410,102 @@
     </section>
     <!-- menu section end -->
 
+    <!-- review section starts -->
+    <section class="review" id="review">
+        <h3 class="sub-heading">customer's review</h3>
+        <h1 class="heading">what they say</h1>
+
+        <div class="swiper-container review-slider">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide slide">
+                    <i class="fas fa-quote-right"></i>
+                    <div class="user">
+                        <img src="images/pic-1.png" alt="">
+                        <div class="user-info">
+                            <h3>john deo</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem nulla ullam architecto odio
+                        dolorum nam mollitia voluptatibus asperiores eveniet error sint, aliquam labore illum
+                        consectetur nisi doloribus itaque tempore qui nemo. Expedita quae voluptates et repellendus,
+                        fugit vel, sed praesentium beatae libero quod aspernatur veniam deleniti nostrum ullam ad natus.
+                    </p>
+                </div>
+                <div class="swiper-slide slide">
+                    <i class="fas fa-quote-right"></i>
+                    <div class="user">
+                        <img src="images/pic-2.png" alt="">
+                        <div class="user-info">
+                            <h3>john deo</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem nulla ullam architecto odio
+                        dolorum nam mollitia voluptatibus asperiores eveniet error sint, aliquam labore illum
+                        consectetur nisi doloribus itaque tempore qui nemo. Expedita quae voluptates et repellendus,
+                        fugit vel, sed praesentium beatae libero quod aspernatur veniam deleniti nostrum ullam ad natus.
+                    </p>
+                </div>
+                <div class="swiper-slide slide">
+                    <i class="fas fa-quote-right"></i>
+                    <div class="user">
+                        <img src="images/pic-3.png" alt="">
+                        <div class="user-info">
+                            <h3>john deo</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem nulla ullam architecto odio
+                        dolorum nam mollitia voluptatibus asperiores eveniet error sint, aliquam labore illum
+                        consectetur nisi doloribus itaque tempore qui nemo. Expedita quae voluptates et repellendus,
+                        fugit vel, sed praesentium beatae libero quod aspernatur veniam deleniti nostrum ullam ad natus.
+                    </p>
+                </div>
+                <div class="swiper-slide slide">
+                    <i class="fas fa-quote-right"></i>
+                    <div class="user">
+                        <img src="images/pic-4.png" alt="">
+                        <div class="user-info">
+                            <h3>john deo</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem nulla ullam architecto odio
+                        dolorum nam mollitia voluptatibus asperiores eveniet error sint, aliquam labore illum
+                        consectetur nisi doloribus itaque tempore qui nemo. Expedita quae voluptates et repellendus,
+                        fugit vel, sed praesentium beatae libero quod aspernatur veniam deleniti nostrum ullam ad natus.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- review section end -->
+
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <!-- custom js file link-->
     <script src="js/script.js"></script>
