--- a/index.html
+++ b/index.html
@@ -560,8 +560,49 @@
     <!--order section end-->
 
     <!--footer section starts-->
-
+    <section class="footer">
+        <div class="box-container">
+            <div class="box">
+                <h3>location</h3>
+                <a href="#">Bangladesh</a>
+                <a href="#">Pakistan</a>
+                <a href="#">India</a>
+                <a href="#">Turky</a>
+                <a href="#">Japan</a>
+            </div>
+            <div class="box">
+                <h3>quick links</h3>
+                <a href="#">home</a>
+                <a href="#">dishes</a>
+                <a href="#">about</a>
+                <a href="#">menu</a>
+                <a href="#">review</a>
+                <a href="#">order</a>
+            </div>
+            <div class="box">
+                <h3>Contact Info</h3>
+                <a href="#">01892406060</a>
+                <a href="#">01751800957</a>
+                <a href="#">aitvetibrahim@gmail.com</a>
+                <a href="#">ibrahimaitvet@gmail.com</a>
+                <a href="#">Jatrabari, Dhaka Bangladesh</a>
+            </div>
+            <div class="box">
+                <h3>follow us</h3>
+                <a href="#">Facebook</a>
+                <a href="#">Linkedin</a>
+                <a href="#">Github</a>
+                <a href="#">Stackoverfllow</a>
+            </div>
+        </div>
+        <div class="credit">copyright @ 2021 by <span>Ibrahim Khan</span></div>
+    </section>
     <!--footer section end-->
+
+    <!-- loader part -->
+    <!-- <div class="loader-container">
+        <img src="images/loader.gif" alt="">
+    </div> -->
 
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <!-- custom js file link-->
